# micro-msx2p

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile  README.md
.circleci/: config.yml
licenses-copy/: TFT_eSPI.txt  TJpgDec.txt  TomThumb.txt  efont.txt  emu2413.txt  lz4-library.txt  z80.txt
msx1-m5stack/: .gitignore  Makefile  README.md  platformio.ini
msx1-m5stamps3/: .gitignore  Makefile  README.md  platformio.ini
msx1-osx/: AppDelegate.h  AppDelegate.m  VideoLayer.h  VideoView.h  VideoView.m  ViewController.h  ViewController.m  constants.h  emu.cpp  emu.h  main.m  vgsspu_al.c
msx1-osx.xcodeproj/: project.pbxproj
msx1-rpizero/: Build.mak  Makefile  README.md  kernel.cpp  kernel.h  kernel_run.cpp  (+2 more)
msx2-android/app/: CMakeLists.txt  build.gradle
msx2-android/app/src/main/: AndroidManifest.xml
msx2-android/app/src/main/cpp/: audio.hpp  jni.cpp
msx2-android/app/src/main/cpp/core/: ay8910.hpp  emu2413.h  msx2.hpp  msx2clock.hpp  msx2kanji.hpp  tc8566af.hpp
msx2-android/app/src/main/java/com/suzukiplan/msx2_android/: EmulatorView.kt  InputStatus.kt  JNI.java  MainActivity.kt  VirtualJoyPad.kt
msx2-android/app/src/main/res/drawable/: ic_baseline_power_settings_new_24.xml
msx2-android/app/src/main/res/layout/: activity_main.xml
msx2-android/app/src/main/res/menu/: main.xml
msx2-android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
msx2-android/app/src/main/res/values-night/: themes.xml
msx2-android/msx2/src/main/cpp/: CMakeLists.txt  audio.hpp  msx2.cpp
msx2-android/msx2/src/main/cpp/core/: emu2413.c  msx2def.h  v9958.hpp
(+227 files in other folders)
